maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:7: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  for(x <- 0 to Largeur-1;y <- 0 to Hauteur-1) {
        ^ShortestPathMaze:26: error: not found: value disatnce
  distance = disatnce + 1
             ^ShortestPathMaze:55: error: type mismatch;
 found   : Boolean
 required: Int
          if (!aMurOuest(X+1,Y) && getIndication(X+1,Y==9999)) { //Pas de mur à gauche de la case de droite (à droite) et pas de marquage
                                                      ^ShortestPathMaze:94: error: type mismatch;
 found   : (Int, Int)
 required: Int
  marquerSol(xSortie,ySortie)
             ^ShortestPathMaze:94: error: type mismatch;
 found   : (Int, Int)
 required: Int
  marquerSol(xSortie,ySortie)
                     ^